<?xml version="1.0"?>
<package>
    <name>catix_messages</name>
    <version>0.1.0</version>
    <description>Catix messages</description>
    <maintainer email="bot.catix@gmail.com">catix</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
</package>
